# pharo-smalltalk-interop-mcp-server

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
pharo_smalltalk_interop_mcp_server/: __init__.py  core.py  server.py
tests/: __init__.py  test_core.py  test_integration.py  test_server.py
