[project]
name = "pharo-smalltalk-interop-mcp-server"
version = "3.2.1"
description = "a local MCP server to communicate local Pharo Smalltalk image"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.5",
    "httpx>=0.28.1"
]

[project.scripts]
pharo-smalltalk-interop-mcp-server = "pharo_smalltalk_interop_mcp_server.server:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "mdformat>=0.7.22",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-gfm>=0.4.1",
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pharo_smalltalk_interop_mcp_server*"]
exclude = ["claudedocs*", "tests*"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mdformat]
wrap = 88
end_of_line = "auto"
